apps/media/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: security-tinyauth-protect@kubernetescrd,tools-sablier@kubernetescrd
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: "Web File Manager"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "si-filebrowser"
    gethomepage.dev/name: "Files"
    gethomepage.dev/href: "https://files.valab.top"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - files.valab.top
      secretName: filebrowser-tls
  rules:
    - host: files.valab.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
